# dagos

./: .dagos-config.yml  .gitignore  .gitlab-ci.yml  .markdownlint.yaml  .pre-commit-config.yaml  .tmuxinator.yml  .vale.ini  Dockerfile  LICENSE  README.md  antora-playbook.yml  build-test-image.sh  environment.yml  package-lock.json  package.json  pyproject.toml  run-all-tests.sh  sonar-project.properties  tox.ini
.github/workflows/: ci.yml  codeql-analysis.yml
dagos/: __main__.py  cli.py  logging.py  main.py
dagos/commands/: import_wsl_distro.py  prepare_wsl_distro.py
dagos/commands/manage/: cli.py  component_scanning.py  group.py
dagos/commands/wsl/: import_wsl_distro.py  prepare_wsl_distro.py
dagos/export/: export.py
dagos/utils/: wsl_utils.py
docs/decisions/: 0001-use-markdown-architectural-decision-records.adoc  0001-use-markdown-architectural-decision-records.md  0002-use-vale-to-lint-documentation.md  decision-template.md  index.adoc  index.md
docs/design/: antora.yml
docs/design/modules/ROOT/: nav.adoc
docs/development/: README.md  download-gitmojis.sh  gitmojis.md
dogfood/environments/: dagos-dev-image.yml  dagos-test-image.yml  mlnw-dev-image.yml
features/: custom_components.feature  github_cli_component.feature
src/dagos/: cli.py  console.py  exceptions.py  logging.py
src/dagos/actions/: domain.py  github.py
src/dagos/commands/: github.py  list_command.py
src/dagos/commands/env/: cli.py  deploy.py
src/dagos/commands/manage/: cli.py  component_scanning.py
src/dagos/commands/wsl/: cli.py  import_wsl_distro.py  prepare_wsl_distro.py
src/dagos/components/: domain.py  exceptions.py
src/dagos/components/chocolatey/: cli.py
src/dagos/components/dive/: dive.py
src/dagos/components/git/: cli.py
src/dagos/components/github-cli/: cli.py
src/dagos/components/github_cli/: cli.py  install.yml
src/dagos/components/gitk/: gitk.py
src/dagos/components/miniconda/: miniconda.py
src/dagos/components/poetry/: poetry.py
src/dagos/components/scanning/: component_scanner.py
src/dagos/components/sdkman/: sdkman.py
src/dagos/components/structurizr/: cli.py  install.yml
src/dagos/components/vale/: install.yml  vale.py
src/dagos/components/vcxsrv/: cli.py
src/dagos/containers/: buildah.py  exceptions.py  utils.py
src/dagos/core/: commands.py  component_scanner.py  components.py  configuration.py  configuration_scanner.py  environment_scanner.py  environments.py  package_managers.py  validator.py
src/dagos/core/configuration/: __init__.py  configuration_domain.py  configuration_scanner.py  domain.py  scanner.py
src/dagos/core/environments/: __init__.py  builder.py  domain.py  environment_builder.py  environment_domain.py  environment_scanner.py  scanner.py
src/dagos/core/regexes/: command_file.melody
src/dagos/core/schemas/: command.schema.yml  configuration.schema.yml  (+1 more)
src/dagos/environments/: schema.yml
src/dagos/exceptions/: software_components.py
src/dagos/platform/: __init__.py  command_runner.py  domain.py  exceptions.py  platform_domain.py  platform_exceptions.py  platform_messages.py  platform_support_checker.py  platform_utils.py  utils.py
src/dagos/plugins/: commands.py  components.py
src/dagos/utils/: file_utils.py  powershell_utils.py  wsl_utils.py
tests/: conftest.py  test_dagos.py
tests/bdd/: features_test.py  test_features.py
tests/bdd/features/: actions.feature  common_components.feature  configure_dagos.feature  custom_components.feature  environments.feature  github_cli_component.feature  list.feature  system_packages.feature  wsl.feature
tests/bdd/steps/: given_steps.py  then_steps.py  utils.py  when_steps.py
tests/core/: test_configuration.py
tests/data/actions/: bat-install.yml  shellcheck-install.yml
tests/data/config/: another.yml  basic.yml  invalid-values.yml  invalid.yml
tests/data/environments/: basic.yml  dagos.yml
tests/functional/: test_custom_components.py  test_github_cli_component.py  test_system_packages.py
tests/platform/: test_utils.py
tests/unit/containers/: buildah_test.py
tests/unit/core/: configuration_scanner_test.py  environments_test.py  test_configuration_scanner.py  validator_test.py
tests/unit/platform/: platform_utils_test.py  test_utils.py  utils_test.py
tests/unit/utils/: file_utils_test.py
(+44 files in other folders)
