[tool.poetry]
name = "dagos"
version = "0.1.2"
description = "A CLI for managing software environments."
license = "MIT"
authors = ["Lucas Resch <lucas.resch@gmx.de>"]
maintainers = ["Lucas Resch <lucas.resch@gmx.de>"]

[tool.poetry.dependencies]
python = "^3.7"

click = "^8.0.3"
click-option-group = "^0.5.3"
rich = "^11.0.0"

ansible = {version = "^4.10.0", optional = true}
ansible-runner = {version = "^2.1.1", optional = true}

[tool.poetry.extras]
ansible = ["ansible", "ansible-runner"]

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pre-commit = "^2.16.0"
pytest = "^5.2"

[tool.black]
# "You should include all Python versions that you want your code to run under."
# Source: https://github.com/psf/black/issues/751
target-version = ['py37', 'py38', 'py39', 'py310']

[tool.poetry.scripts]
dagos = "dagos.cli:dagos"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
