[tool.poetry]
name = "dagos"
version = "0.1.2"
description = "A CLI for managing software environments."
license = "MIT"
authors = ["Lucas Resch <lucas.resch@gmx.de>"]
maintainers = ["Lucas Resch <lucas.resch@gmx.de>"]

[tool.poetry.dependencies]
python = "^3.7"

click = "^8.0.3"
click-option-group = "^0.5.3"
loguru = "^0.6.0"
PyYAML = "^6.0"
requests = "^2.27.1"
rich = "^11.0.0"
rich-click = "^1.0.0"
yamale = "^4.0.3"

ansible = {version = "^4.10.0", optional = true}
ansible-runner = {version = "^2.1.1", optional = true}

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pre-commit = "^2.17.0"
pytest = "^6.2"
pytest-bdd = "^5.0.0"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"
tox-conda = "^0.9.1"
tox-poetry = "^0.4.1"

[tool.poetry.extras]
ansible = ["ansible", "ansible-runner"]

[tool.black]
# "You should include all Python versions that you want your code to run under."
# Source: https://github.com/psf/black/issues/751
target-version = ['py37', 'py38', 'py39', 'py310']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov=dagos --cov-report=term-missing:skip-covered"
required_plugins = [
    "pytest-bdd",
]
markers = [
    "integration"
]

[tool.coverage.run]
branch = true
relative_files = true
source = [
    "src/*",
    "/root/dagos/src/*"
]
omit = [
    "src/dagos/__main__.py",
    "tests/*",
    "*/.dagos/*"
]

[tool.poetry.scripts]
dagos = "dagos.cli:dagos"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
